--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Courgette&family=Poppins:wght@300&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
 * {
   margin: 0;
@@ -72,7 +72,7 @@ header .navBar {
 .home-bg {
   width: 80%;
   height: 100%;
-  background: url('./assets/bread.jpg');
+  background: url("./assets/bread.jpg");
   background-size: cover;
   background-position: center;
   box-shadow: 5px 1px 10px -6px rgba(59, 59, 59, 0.75);
@@ -84,7 +84,7 @@ header .navBar {
   position: absolute;
   top: 110px;
   left: 450px;
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   font-size: 3rem;
   font-weight: lighter;
   text-transform: uppercase;
@@ -113,7 +113,6 @@ header .navBar {
   align-items: center;
   justify-content: center;
   box-shadow: 5px 1px 10px -6px rgba(59, 59, 59, 0.75);
-  
 }
 
 .menu .food-image {
@@ -122,15 +121,56 @@ header .navBar {
 }
 
 .menu .food-name {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 22px;
   color: #566270;
 }
 
 .menu .food-price {
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   font-size: 20px;
   color: #ec7343;
+}
+
+.contact {
+  width: 85%;
+  height: 81.3vh;
+  display: flex;
+  background-color: #f8f7f7;
+  box-shadow: 5px 1px 10px -6px rgba(59, 59, 59, 0.75);
+}
+
+.contact .contact-img {
+  width: 40%;
+  background: url("./assets/contact.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.contact .contact-info {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  justify-content: center;
+}
+
+.contact-info .contact-title {
+  width: 20rem;
+  padding: 10px;
+  color: #ec7343;
+  font-family: "Courgette", cursive;
+  font-size: 27px;
+}
+
+.contact-info p {
+  width: 20rem;
+  padding: 5px;
+  color: #566270;
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
 }
 
 footer {
@@ -200,8 +240,4 @@ footer .credits {
 
 .credits a:hover {
   color: #c76038;
-}
-
-.active {
-  border: 1px solid black;
 }
